WIP: bolt home page

--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,9 @@
     "packages/theme*",
     "packages/utilities*",
     "packages/build*",
-    "packages/bolt"
+    "packages/bolt",
+    "packages/bolt-core/**/*",
+    "packages/bolt-ui/**/*",
+    "sandbox/styleguide"
   ]
 }
