--- a/packages/tools-typography/package.json
+++ b/packages/tools-typography/package.json
@@ -24,6 +24,9 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/settings-font-family": "^0.0.0",
+    "@bolt/settings-font-size": "^0.0.0",
+    "@bolt/settings-font-weight": "^0.0.0",
     "@bolt/tools-sassy-maps": "^0.1.0"
   }
 }
