--- a/sandbox/styleguide/source/_config.yml
+++ b/sandbox/styleguide/source/_config.yml
@@ -24,6 +24,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 destination: ../public
+incremental: false
 keep_files:
   - styles
 
