--- a/packages/bolt-build-tools/styles/package.json
+++ b/packages/bolt-build-tools/styles/package.json
@@ -21,6 +21,8 @@
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "browserslist": "^2.1.5",
+    "chai": "^4.1.0",
+    "chai-fs": "^1.0.0",
     "debug": "^2.6.8",
     "del": "^3.0.0",
     "eyeglass": "^1.2.1",
@@ -40,6 +42,7 @@
     "immutable-css": "^1.1.2",
     "json-sass": "^1.3.5",
     "merge": "^1.2.0",
+    "mocha": "^3.4.2",
     "node-sass-export": "0.0.2",
     "node-sass-glob-importer": "^3.0.2",
     "node-sass-magic-importer": "^4.1.5",
@@ -52,6 +55,7 @@
     "postcss-scss": "^1.0.2",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
+    "rimraf": "^2.6.1",
     "sass-module-importer": "^1.4.0",
     "sassdoc": "^2.3.0",
     "stampit": "^3.1.3",
