--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "postcss-cli": "^4.1.0",
     "postcss-smart-import": "^0.7.5",
     "pre-commit": "^1.2.2",
+    "precommit": "^1.2.2",
     "publish-please": "^2.3.1",
     "request": "^2.81.0",
     "sassdoc": "^2.3.0",
