--- a/packages/bolt-build-tools/symlinks/package.json
+++ b/packages/bolt-build-tools/symlinks/package.json
@@ -19,13 +19,11 @@
   "author": "Salem Ghoweri",
   "dependencies": {
     "@bolt/build-core": "0.0.0",
-    "debug": "^2.6.8",
     "del-symlinks": "^0.1.2",
     "fs": "0.0.1-security",
     "globby": "^6.1.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-changed-in-place": "^2.2.0",
-    "gulp-watch": "^4.3.11",
+    "gulp-util": "^3.0.8",
     "js-yaml": "^3.9.0",
     "merge": "^1.2.0",
     "path": "^0.12.7",
