--- a/packages/bolt-build-tools/styles/package.json
+++ b/packages/bolt-build-tools/styles/package.json
@@ -29,6 +29,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-duration": "0.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
