--- a/packages/bolt-build-tools/styles/package.json
+++ b/packages/bolt-build-tools/styles/package.json
@@ -38,6 +38,7 @@
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-stylelint": "^3.9.0",
+    "gulp-util": "^3.0.8",
     "immutable-css": "^1.1.2",
     "json-sass": "^1.3.5",
     "merge": "^1.2.0",
