fix: minor Sass cleanup and updates to normalize breakpoints using the Breakpoint Sass module

--- a/lerna.json
+++ b/lerna.json
@@ -11,8 +11,10 @@
     "packages/utilities*",
     "packages/build*",
     "packages/bolt",
+    "packages/bolt-config/*",
     "packages/bolt-core/**/*",
     "packages/bolt-ui/**/*",
+    "packages/**/*",
     "sandbox/styleguide"
   ]
 }
