--- a/packages/bolt-core/01-settings/settings-breakpoints/package.json
+++ b/packages/bolt-core/01-settings/settings-breakpoints/package.json
@@ -22,5 +22,9 @@
   "style": "index.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "breakpoint-sass": "^2.7.1",
+    "breakpoint-slicer": "^2.0.0"
   }
 }
