--- a/packages/bolt-core/02-tools/package.json
+++ b/packages/bolt-core/02-tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/tools",
+  "name": "@bolt/tools.all",
   "description": "All tools in Bolt Core",
   "keywords": [
     "bolt design system",
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
