--- a/sandbox/styleguide/package.json
+++ b/sandbox/styleguide/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bolt/settings.all": "0.1.0",
+    "@bolt/tools.all": "0.1.0",
+    "@bolt/generic.all": "0.1.0",
     "@theme-tools/plugin-browser-sync": "^0.4.3",
     "@theme-tools/plugin-jekyll": "^0.4.2",
     "@theme-tools/plugin-sass": "^0.4.4",
-    "gulp": "gulpjs/gulp#4.0",
-    "normalize-scss": "^7.0.0",
-    "@bolt/settings": "0.0.0",
-    "@bolt/tools": "0.0.0",
-    "@bolt/generic": "0.0.0"
+    "gulp": "github:gulpjs/gulp#4.0",
+    "normalize-scss": "^7.0.0"
   }
 }
