fix: removing self-signed certs. testing updates to publishing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,12 @@ node_modules/*
 packages/_*
 packages/**/package-lock.json
 packages/*/tests/tmp
-packagesInProgress
 public
-stuff
 vendor
 
+packages/bolt-build/server/certs
+yarn-error.log
+**/*/yarn-error.log
 
 packages/_bolt-build-tools
 packages/_pegakit-css
