--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "fix": "gulp fix",
     "lint": "eslint ./packages/bolt-build-tools",
     "prepublishOnly": "npm run snyk-protect",
-    "prerelease": "lerna publish --canary",
     "publish-please": "publish-please",
-    "publish": "lerna publish",
+    "publish-canary": "lerna run build && lerna run publish-please && lerna publish --canary --yes",
+    "publish-next": "lerna run build && lerna run publish-please && lerna publish --npm-tag=next",
+    "publish": "lerna run build && lerna run publish-please && lerna publish",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "serve": "gulp serve",
     "setup:composer": "cd sandbox/pattern-library && rm composer.lock && rm -rf vendor && composer install --no-interaction",
