--- a/lerna.json
+++ b/lerna.json
@@ -26,7 +26,10 @@
       ]
     },
     "bootstrap": {
-      "ignore": "styleguidekit-assets-default"
+      "ignore": [
+        "styleguidekit-assets-default",
+        "@theme-tools"
+      ]
     }
   },
   "hoist": false
