--- a/packages/bolt-build/server/package.json
+++ b/packages/bolt-build/server/package.json
@@ -40,8 +40,8 @@
     "static-http2-server": "^1.5.6"
   },
   "scripts": {
-    "postinstall": "if [ ! -d 'certs' ]; then npm run setup; fi",
-    "setup": "http2-server --generate-cert"
+    "_postinstall": "if [ ! -d 'certs' ]; then rm -rf certs && npm run setup; fi",
+    "_setup": "http2-server --generate-cert"
   },
   "private": false
 }
