test: re-testing travis build

--- a/sandbox/styleguide/package.json
+++ b/sandbox/styleguide/package.json
@@ -19,7 +19,7 @@
     "@theme-tools/plugin-browser-sync": "^0.4.3",
     "@theme-tools/plugin-jekyll": "^0.4.2",
     "@theme-tools/plugin-sass": "^0.4.4",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "gulpjs/gulp#4.0",
     "normalize-scss": "^7.0.0"
   }
 }
