--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-# sudo: required
+sudo: false
+
 dist: trusty
 
 language: php
@@ -22,12 +23,8 @@ addons:
     - graphicsmagick
 
 before_install:
-# - sudo rm -rf ~/.nvm - curl -sL "https://deb.nodesource.com/setup_${NODE_RELEASE}"
-#   | sudo -E bash -
-# - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $NODE_RELEASE
 - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.27.5
-- export PATH="$HOME/.yarn/bin:$PATH"
-# - sudo apt-get install graphicsmagick
+- export PATH=$HOME/.yarn/bin:$PATH
 - composer global require hirak/prestissimo
 - if [[ -n "$GITHUB_TOKEN" ]]; then composer config -g github-oauth.github.com ${GITHUB_TOKEN}; fi;
 # - sudo apt-get install graphicsmagick
