--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ before_script:
 - phpenv config-rm xdebug.ini
 
 install:
+- npm install --global lerna
 - npm run setup:composer
 - npm run bootstrap
-# - npm install --global lerna
 # - npm install gulpjs/gulp-cli -g
 # - npm install gulpjs/gulp#4.0
 
