--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ dist: trusty
 language: php
 
 php:
-  - 7.0
   - 7.1
 
 env:
@@ -37,11 +36,11 @@ before_script:
 - phpenv config-rm xdebug.ini
 
 install:
+- npm install gulpjs/gulp-cli -g
+- npm install gulpjs/gulp#4.0
 - npm install --global lerna
 - npm run setup:composer
 - npm run bootstrap
-# - npm install gulpjs/gulp-cli -g
-# - npm install gulpjs/gulp#4.0
 
 script:
 - npm run test && npm run build
