test: testing pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint:fix": "eslint --fix ./packages/bolt-build-tools"
   },
   "pre-commit": [
-    "test"
+    "test",
+    "build"
   ],
   "config": {
     "commitizen": {
