test: re-testing build without global gulp4 install

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
 install:
 - npm install -g surge
 - npm install gulpjs/gulp-cli -g
-- npm install gulpjs/gulp#4.0
+# - npm install gulpjs/gulp#4.0
 - npm install --global lerna
 - npm run setup:composer
 - npm run bootstrap
