fix: fixing build task for jekyll styleguide
- stashing stub of the action-block component coming down the pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ packages/*/tests/tmp
 public
 vendor
 
+scripts/deploy.pem
 packages/bolt-build/server/certs
 packages/bolt-build/server/_certs
 yarn-error.log
