test: testing unified build and local server environment, combining jekyll w/ pattern lab

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ packages/**/package-lock.json
 packages/*/tests/tmp
 public
 vendor
+.bolt-website
 
 scripts/deploy.pem
 packages/bolt-build/server/certs
