--- a/sandbox/styleguide/source/_config.yml
+++ b/sandbox/styleguide/source/_config.yml
@@ -23,10 +23,12 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
-destination: ../public
+destination: ../../../.bolt-website
 incremental: false
 keep_files:
   - styles
+  - patterns
+  - docs
 
 # Build settings
 markdown: kramdown
