--- a/sandbox/pattern-library/config/config.yml
+++ b/sandbox/pattern-library/config/config.yml
@@ -19,7 +19,7 @@ patternStates:
 styleGuideExcludes: ''
 cacheBusterOn: 'true'
 exportDir: export
-publicDir: ../../.bolt-website/patterns
+publicDir: ../../bolt-website/patterns
 sourceDir: source
 defaultPattern: all
 defaultShowPatternInfo: false
