test: re-testing surge deployment

--- a/.surgeignore
+++ b/.surgeignore
@@ -3,4 +3,7 @@
 !bower_components
 !styleguide/bower_components
 !**/bower_components
-!.bolt-website
+!bolt-website
+!bolt-website/**/*
+!bolt-website/**
+!bolt-website/patterns/styleguide/bower_components
