--- a/sandbox/styleguide/source/.surgeignore
+++ b/sandbox/styleguide/source/.surgeignore
@@ -3,4 +3,7 @@
 !bower_components
 !styleguide/bower_components
 !**/bower_components
-!.bolt-website
+!bolt-website
+!bolt-website/**/*
+!bolt-website/**
+!bolt-website/patterns/styleguide/bower_components
