test: re-testing bolt surge.sh deployment

--- a/lerna.json
+++ b/lerna.json
@@ -22,7 +22,11 @@
   "commands": {
     "publish": {
       "ignore": [
-        "ignored-file"
+        "ignored-file",
+        "styleguidekit-assets-default",
+        "@bolt/setting-colors",
+        "@bolt/tool-strip-unit",
+        "@bolt/tools-typography"
       ]
     },
     "bootstrap": {
