--- a/packages/bolt-build/styles/package.json
+++ b/packages/bolt-build/styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-styles",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "license": "MIT",
   "description": "Compile Sass to CSS",
   "main": "index.js",
@@ -22,7 +22,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.1.0-beta.1",
+    "@bolt/build-core": "^0.1.0-beta.2",
     "autoprefixer": "^7.1.2",
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
