--- a/packages/bolt-build/lerna/package.json
+++ b/packages/bolt-build/lerna/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-lerna",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "license": "MIT",
   "description": "Automatically re-run lerna bootstrap when package.json files change.",
   "main": "index.js",
@@ -24,7 +24,7 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.1.0-beta.1",
+    "@bolt/build-core": "^0.1.0-beta.2",
     "del-symlinks": "^0.1.2",
     "fs": "0.0.1-security",
     "globby": "^6.1.0",
