--- a/packages/bolt-build/package.json
+++ b/packages/bolt-build/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-tools",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "license": "MIT",
   "description": "Curated collection of front-end build tools in the Bolt Design System.",
   "main": "index.js",
@@ -23,14 +23,14 @@
     }
   ],
   "dependencies": {
-    "gulp": "gulpjs/gulp#4.0",
-    "@bolt/build-core": "0.1.0-beta.1",
-    "@bolt/build-lerna": "0.1.0-beta.1",
-    "@bolt/build-patternlab": "0.1.0-beta.1",
-    "@bolt/build-server": "0.1.0-beta.1",
-    "@bolt/build-slack": "0.1.0-beta.1",
-    "@bolt/build-styles": "0.1.0-beta.1",
-    "@bolt/build-symlinks": "0.1.0-beta.1"
+    "@bolt/build-core": "^0.1.0-beta.2",
+    "@bolt/build-lerna": "^0.1.0-beta.2",
+    "@bolt/build-patternlab": "^0.1.0-beta.2",
+    "@bolt/build-server": "^0.1.0-beta.2",
+    "@bolt/build-slack": "^0.1.0-beta.2",
+    "@bolt/build-styles": "^0.1.0-beta.2",
+    "@bolt/build-symlinks": "^0.1.0-beta.2",
+    "gulp": "gulpjs/gulp#4.0"
   },
   "publishConfig": {
     "access": "public"
