--- a/packages/bolt-build/patternlab/package.json
+++ b/packages/bolt-build/patternlab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-patternlab",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "license": "MIT",
   "description": "Compile Pattern Lab",
   "main": "index.js",
@@ -22,9 +22,9 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "0.1.0-beta.1",
-    "debug": "^2.6.8",
+    "@bolt/build-core": "^0.1.0-beta.2",
     "child_process": "^1.0.2",
+    "debug": "^2.6.8",
     "fs-extra": "^4.0.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-notify": "^3.0.0",
