--- a/packages/bolt-build/server/package.json
+++ b/packages/bolt-build/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-server",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "license": "MIT",
   "description": "Build tools server",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/build-core": "0.1.0-beta.1",
+    "@bolt/build-core": "^0.1.0-beta.2",
     "browser-sync": "^2.18.12",
     "debug": "^2.6.8",
     "devcert": "^0.3.2",
