--- a/packages/bolt-core/01-settings/package.json
+++ b/packages/bolt-core/01-settings/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,10 +34,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-breakpoints": "0.1.0-beta.1",
-    "@bolt/settings-global": "0.1.0-beta.1",
-    "@bolt/settings-font-family": "0.1.0-beta.1",
-    "@bolt/settings-font-size":   "0.1.0-beta.1",
-    "@bolt/settings-font-weight": "0.1.0-beta.1"
+    "@bolt/settings-breakpoints": "^0.1.0-beta.2",
+    "@bolt/settings-font-family": "^0.1.0-beta.2",
+    "@bolt/settings-font-size": "^0.1.0-beta.2",
+    "@bolt/settings-font-weight": "^0.1.0-beta.2",
+    "@bolt/settings-global": "^0.1.0-beta.2"
   }
 }
