--- a/packages/bolt-core/02-tools/tools-font-family/package.json
+++ b/packages/bolt-core/02-tools/tools-font-family/package.json
@@ -8,7 +8,7 @@
     "design system",
     "typography"
   ],
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,8 +35,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-family": "0.1.0-beta.1",
-    "@bolt/tools-sassy-maps": "0.1.0-beta.1"
+    "@bolt/settings-font-family": "^0.1.0-beta.2",
+    "@bolt/tools-sassy-maps": "^0.1.0-beta.2"
   },
   "private": false
 }
