--- a/packages/bolt-core/03-generic/package.json
+++ b/packages/bolt-core/03-generic/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,6 +34,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/generic-global": "0.1.0-beta.1"
+    "@bolt/generic-global": "^0.1.0-beta.2"
   }
 }
