--- a/packages/bolt-core/04-elements/package.json
+++ b/packages/bolt-core/04-elements/package.json
@@ -8,7 +8,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.0-alpha.2",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -35,9 +35,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/elements-headings": "0.1.0-alpha.1",
-    "@bolt/elements-links": "0.1.0-alpha.1",
-    "@bolt/elements-page": "0.1.0-alpha.1",
-    "@bolt/elements-small": "0.1.0-alpha.1"
+    "@bolt/elements-headings": "^0.1.0-alpha.2",
+    "@bolt/elements-links": "^0.1.0-alpha.2",
+    "@bolt/elements-page": "^0.1.0-alpha.2",
+    "@bolt/elements-small": "^0.1.0-alpha.2"
   }
 }
