--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/core",
-  "version": "0.1.0-beta.1",
+  "version": "0.1.0-beta.2",
   "description": "The CSS Framework `Core` powering the Bolt Design System",
   "repository": {
     "type": "git",
@@ -16,9 +16,9 @@
   "author": "Salem Ghoweri",
   "license": "MIT",
   "dependencies": {
-    "@bolt/settings-all": "0.1.0-beta.1",
-    "@bolt/tools-all": "0.1.0-beta.1",
-    "@bolt/generic-all": "0.1.0-beta.1"
+    "@bolt/generic-all": "^0.1.0-beta.2",
+    "@bolt/settings-all": "^0.1.0-beta.2",
+    "@bolt/tools-all": "^0.1.0-beta.2"
   },
   "publishConfig": {
     "access": "public"
