--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,9 @@ install:
 
 deploy:
   skip_cleanup: true
+  provider: surge
+  project: ./bolt-website/
+  domain: boltdesignsystem.surge.sh  
 
 script:
 - npm run test && npm run build
