WIP: stashing in-progress changes

--- a/packages/bolt-core/01-settings/settings-breakpoints/package.json
+++ b/packages/bolt-core/01-settings/settings-breakpoints/package.json
@@ -36,7 +36,9 @@
   },
   "dependencies": {
     "breakpoint-sass": "^2.7.1",
-    "breakpoint-slicer": "bolt-design-system/breakpoint-slicer"
+    "breakpoint-slicer": "bolt-design-system/breakpoint-slicer",
+    "gulp": "^3.9.1",
+    "mappy-breakpoints": "^0.2.3"
   },
   "private": false
 }
