--- a/packages/bolt-core/01-settings/settings-font-weight/package.json
+++ b/packages/bolt-core/01-settings/settings-font-weight/package.json
@@ -10,7 +10,7 @@
     "typography",
     "font weight"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.2.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
