--- a/packages/bolt-build/core/package.json
+++ b/packages/bolt-build/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-core",
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0",
   "license": "MIT",
   "description": "Build tools core",
   "main": "index.js",
