--- a/packages/bolt-config/config-stylelint/package.json
+++ b/packages/bolt-config/config-stylelint/package.json
@@ -5,7 +5,7 @@
     "stylelint",
     "stylelint-config"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.2.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
