--- a/packages/bolt-core/01-settings/settings-breakpoints/package.json
+++ b/packages/bolt-core/01-settings/settings-breakpoints/package.json
@@ -8,7 +8,7 @@
     "design system",
     "breakpoints"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
