--- a/packages/bolt-core/02-tools/package.json
+++ b/packages/bolt-core/02-tools/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -34,11 +34,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-font-family": "^0.1.0-beta.2",
-    "@bolt/tools-font-kerning": "^0.1.0-beta.2",
-    "@bolt/tools-font-size": "^0.1.0-beta.2",
-    "@bolt/tools-font-weight": "^0.1.0-beta.2",
-    "@bolt/tools-sassy-maps": "^0.1.0-beta.2",
-    "@bolt/tools-strip-unit": "^0.1.0-beta.2"
+    "@bolt/tools-font-family": "^0.2.0",
+    "@bolt/tools-font-kerning": "^0.1.0",
+    "@bolt/tools-font-size": "^0.2.0",
+    "@bolt/tools-font-weight": "^0.2.0",
+    "@bolt/tools-sassy-maps": "^0.2.0",
+    "@bolt/tools-strip-unit": "^0.2.0"
   }
 }
