--- a/packages/bolt-core/02-tools/tools-font-weight/package.json
+++ b/packages/bolt-core/02-tools/tools-font-weight/package.json
@@ -10,7 +10,7 @@
     "typography",
     "font weight"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.2.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,8 +37,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-font-weight": "^0.1.0-beta.2",
-    "@bolt/tools-sassy-maps": "^0.1.0-beta.2"
+    "@bolt/settings-font-weight": "^0.2.0",
+    "@bolt/tools-sassy-maps": "^0.2.0"
   },
   "private": false
 }
