--- a/packages/bolt-core/02-tools/tools-sassy-maps/package.json
+++ b/packages/bolt-core/02-tools/tools-sassy-maps/package.json
@@ -7,7 +7,7 @@
     "css framework",
     "design system"
   ],
-  "version": "0.1.0-beta.2",
+  "version": "0.2.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
