--- a/packages/bolt-core/04-elements/elements-links/package.json
+++ b/packages/bolt-core/04-elements/elements-links/package.json
@@ -8,7 +8,7 @@
     "design system",
     "elements"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
