--- a/sandbox/pattern-library/package.json
+++ b/sandbox/pattern-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/bolt-pattern-library",
-  "version": "0.0.1-0",
+  "version": "0.1.0",
   "description": "Bolt Pattern Library",
   "repository": {
     "type": "git",
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "@bolt/build-tools": "^0.1.0-beta.2",
-    "@bolt/elements-all": "^0.1.0-alpha.2",
-    "@bolt/generic-all": "^0.1.0-beta.2",
-    "@bolt/settings-all": "^0.1.0-beta.2",
-    "@bolt/tools-all": "^0.1.0-beta.2"
+    "@bolt/build-tools": "^0.1.0",
+    "@bolt/elements-all": "^0.1.0",
+    "@bolt/generic-all": "^0.1.0",
+    "@bolt/settings-all": "^0.1.0",
+    "@bolt/tools-all": "^0.1.0"
   },
   "publishConfig": {
     "access": "public"
