--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ packages/_pegakit-ui
 
 !**/node_modules/@bolt-test/*
 !**/@bolt-test
+
+# Ignore any Pattern Lab --> packages folders being symlinked
+sandbox/pattern-library/source/_patterns/**/bolt-*
