WIP: upgrading package versions

--- a/sandbox/styleguide/package.json
+++ b/sandbox/styleguide/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jekyll",
-  "version": "0.4.4-beta.0",
+  "version": "0.5.0",
   "description": "",
   "private": true,
   "main": "index.js",
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bolt/build-styles": "^0.2.0",
-    "@bolt/elements-all": "^0.1.0",
-    "@bolt/generic-all": "^0.1.0",
-    "@bolt/settings-all": "^0.1.0",
-    "@bolt/tools-all": "^0.1.0",
+    "@bolt/build-styles": "^0.3.0",
+    "@bolt/elements-all": "^0.2.0",
+    "@bolt/generic-all": "^0.2.0",
+    "@bolt/settings-all": "^0.2.0",
+    "@bolt/tools-all": "^0.2.0",
     "@theme-tools/plugin-browser-sync": "^0.4.3",
     "@theme-tools/plugin-jekyll": "^0.4.2",
     "@theme-tools/plugin-sass": "^0.4.4",
