WIP: stacks, inlines, insets

--- a/packages/bolt-core/01-settings/package.json
+++ b/packages/bolt-core/01-settings/package.json
@@ -38,6 +38,7 @@
     "@bolt/settings-font-family": "^0.1.0-beta.2",
     "@bolt/settings-font-size": "^0.1.0-beta.2",
     "@bolt/settings-font-weight": "^0.1.0-beta.2",
-    "@bolt/settings-global": "^0.1.0-beta.2"
+    "@bolt/settings-global": "^0.1.0-beta.2",
+    "@bolt/settings-spacing": "^0.1.0-alpha.1"
   }
 }
