--- a/lerna.json
+++ b/lerna.json
@@ -17,7 +17,8 @@
     "packages/bolt-build",
     "packages/bolt-build/*",
     "packages/bolt-build/**/*",
-    "sandbox/**/*"
+    "sandbox/**/*",
+    "."
   ],
   "commands": {
     "publish": {
