--- a/packages/bolt-build/core/package.json
+++ b/packages/bolt-build/core/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "browser-sync": "^2.18.12",
     "child_process": "^1.0.2",
+    "cli-highlight": "^1.1.4",
     "events": "^1.1.1",
+    "find-up": "^2.1.0",
     "fs-extra": "^4.0.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-exec": "^2.1.3",
@@ -35,7 +37,9 @@
     "js-yaml": "^3.9.0",
     "merge": "^1.2.0",
     "node-notifier": "^5.1.2",
-    "path": "^0.12.7"
+    "open": "0.0.5",
+    "path": "^0.12.7",
+    "rc": "^1.2.1"
   },
   "publishConfig": {
     "access": "public"
