--- a/packages/bolt-config/config-eslint/package.json
+++ b/packages/bolt-config/config-eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/eslint-config",
+  "name": "@bolt/config-eslint",
   "description": "Bolt Design System's ESLint config",
   "keywords": [
     "eslint",
