--- a/packages/bolt-core/02-tools/package.json
+++ b/packages/bolt-core/02-tools/package.json
@@ -40,6 +40,7 @@
     "@bolt/tools-font-weight": "^0.1.0-beta.2",
     "@bolt/tools-sassy-maps": "^0.1.0-beta.2",
     "@bolt/tools-strip-unit": "^0.1.0-beta.2",
-    "@bolt/tools-spacing": "^0.1.0-alpha.1"
+    "@bolt/tools-spacing": "^0.1.0-alpha.1",
+    "@bolt/tools-color-palette": "^0.1.0-alpha.1"
   }
 }
