WIP - boltdesignsystem.com cleanup

--- a/packages/ui-toolkit/08-utilities/utilities-widths/package.json
+++ b/packages/ui-toolkit/08-utilities/utilities-widths/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/utilities-all",
-  "description": "Collection of all Utilities in Bolt",
+  "name": "@bolt/utilities-widths",
+  "description": "Width Utilities in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -33,9 +33,5 @@
   "style": "index.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@bolt/utilities-spacing": "^0.1.0-alpha.1",
-    "@bolt/utilities-widths": "^0.1.0-alpha.1"
   }
 }
