WIP - stashing latest

--- a/packages/ui-toolkit/05-objects/objects-ui-list/package.json
+++ b/packages/ui-toolkit/05-objects/objects-ui-list/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/objects-all",
-  "description": "Non-cosmetic design patterns in Bolt",
+  "name": "@bolt/objects-ui-list",
+  "description": "UI List Object in Bolt",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -33,12 +33,5 @@
   "style": "index.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@bolt/objects-wrapper": "^0.1.0-alpha.1",
-    "@bolt/objects-ui-list": "^0.1.0-alpha.1",
-    "@bolt/objects-grid": "^0.1.0-alpha.1",
-    "@bolt/objects-inline-list": "^0.1.0-alpha.1",
-    "@bolt/objects-island": "^0.1.0-alpha.1"
   }
 }
