--- a/packages/build-tools/build-browsersync/package.json
+++ b/packages/build-tools/build-browsersync/package.json
@@ -37,7 +37,10 @@
     "merge": "^1.2.0",
     "path": "^0.12.7",
     "spdy": "^3.4.7",
-    "static-http2-server": "^1.5.6"
+    "static-http2-server": "^1.5.6",
+    "connect-history-api-fallback": "latest",
+    "browser-sync-close-hook": "latest",
+    "browser-sync-reuse-tab": "latest"
   },
   "scripts": {
     "_postinstall": "if [ ! -d 'certs' ]; then rm -rf certs && npm run setup; fi",
