WIP: adding missing files

--- a/packages/website-jekyll/source/_config.yml
+++ b/packages/website-jekyll/source/_config.yml
@@ -27,8 +27,11 @@ destination: ../../../bolt-website
 incremental: false
 keep_files:
   - styles
+  - scripts
   - patterns
   - docs
+
+version: v0.2-alpha
 
 include:
 - ".surgeignore"
