--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
-    "serve": "latest",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -78,6 +77,7 @@
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
     "cz-conventional-changelog": "^2.0.0",
+    "feature-toggle": "^0.3.0",
     "gulp": "gulpjs/gulp#4.0",
     "husky": "^0.14.3",
     "inquirer": "^3.2.0",
@@ -85,6 +85,7 @@
     "mocha": "^3.4.2",
     "precommit": "^1.2.2",
     "publish-please": "^2.3.1",
+    "serve": "latest",
     "snyk": "^1.36.2",
     "validate-commit-msg": "^2.12.2"
   },
