--- a/packages/ui-toolkit/06-components/components-all/package.json
+++ b/packages/ui-toolkit/06-components/components-all/package.json
@@ -34,5 +34,9 @@
   "style": "index.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/components-site": "^0.1.0-alpha.1",
+    "@bolt/components-page-footer": "^0.1.0-alpha.1"
   }
 }
