--- a/lerna.json
+++ b/lerna.json
@@ -25,6 +25,8 @@
     "packages/ui-toolkit/06-components/**",
     "packages/ui-toolkit/07-themes/**",
     "packages/ui-toolkit/08-utilities/**",
-    "packages/ui-toolkit/bolt"
+    "packages/ui-toolkit/bolt",
+    "packages/exec-php",
+    "packages/frctl-twig"
   ]
 }
