--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pega Digital Design System",
   "scripts": {
     "now:deploy": "originalurl=$(now boltdesignsystem) | branch=$(git rev-parse --abbrev-ref HEAD | sed -e 's///-/g') | now alias $originalurl $branch'-boltdesignsystem'",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap --concurrency 12",
     "commitmsg": "validate-commit-msg",
     "fix:scripts": "gulp scripts:fix",
     "fix:scss": "gulp styles:fix",
@@ -19,6 +19,7 @@
     "start": "serve ./boltdesignsystem --single",
     "build": "if [ ! -f ./bolt-website/patterns/index.html ]; then npm run setup:composer; fi && gulp build",
     "serve": "gulp serve",
+    "serve:fractal": "fractal start --sync",
     "setup:composer": "cd packages/website-pattern-lab && rm -rf composer.lock && rm -rf vendor && composer install --no-interaction --prefer-dist --no-dev",
     "setup:homebrew": "sh scripts/install-homebrew.sh",
     "snyk-protect": "snyk protect",
@@ -69,6 +70,9 @@
   },
   "homepage": "https://github.com/pega-digital/bolt#readme",
   "dependencies": {
+    "@ec-europa/ecl-fractal-theme": "^0.9.0",
+    "@frctl/fractal": "1.1.5",
+    "@frctl/twig": "^1.0.0-beta.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -78,6 +82,7 @@
     "chai-fs": "^1.0.0",
     "cz-conventional-changelog": "^2.0.0",
     "feature-toggle": "^0.3.0",
+    "frctl-twig": "github:bolt-design-system/twig",
     "gulp": "gulpjs/gulp#4.0",
     "husky": "^0.14.3",
     "inquirer": "^3.2.0",
