--- a/packages/website-pattern-lab/config/config.yml
+++ b/packages/website-pattern-lab/config/config.yml
@@ -19,7 +19,8 @@ patternStates:
 styleGuideExcludes: ''
 cacheBusterOn: 'true'
 exportDir: export
-publicDir: ../../bolt-website/patterns
+publicDir: public
+#publicDir: ../../bolt-website/patterns
 sourceDir: source
 defaultPattern: all
 defaultShowPatternInfo: false
