--- a/lerna.json
+++ b/lerna.json
@@ -15,6 +15,8 @@
     "packages/bolt-core/XX-deprecated/*",
     "packages/bolt-config/config-*",
     "packages/bolt-build",
+    "packages/bolt-ui",
+    "packages/bolt-ui/bolt-font-loader",
     "packages/bolt-build/*",
     "packages/bolt-build/**/*",
     "sandbox/**/*"
