--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Pega Digital Design System",
   "scripts": {
-    "bootstrap": "lerna bootstrap --hoist",
+    "bootstrap": "lerna bootstrap --concurrency 20",
     "build": "gulp build",
     "commitmsg": "validate-commit-msg",
     "deploy:surge": "npm run build && surge bolt-website $npm_package_config_surgeDomain",
