--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
     "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^4.5.0",
     "feature-toggle": "^0.3.0",
     "gulp": "gulpjs/gulp#4.0",
     "husky": "^0.14.3",
