WIP: stashing latest

--- a/packages/bolt-core/04-elements/elements-em/package.json
+++ b/packages/bolt-core/04-elements/elements-em/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@bolt/elements-all",
-  "description": "Collection of ITCSS HTML element defaults in the Bolt Design System `Core` CSS Framework",
+  "name": "@bolt/elements-strong",
+  "description": "Basic HTML Strong Tag",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -25,20 +25,13 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bolt-design-system/bolt/tree/master/packages/"
+    "url": "https://github.com/bolt-design-system/bolt/"
   },
   "bugs": {
-    "url": "https://github.com/pega-digital/bolt/issues"
+    "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "main": "elements-all.scss",
+  "style": "index.scss",
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "@bolt/elements-headings": "^0.1.0-alpha.2",
-    "@bolt/elements-links": "^0.1.0-alpha.2",
-    "@bolt/elements-page": "^0.1.0-alpha.2",
-    "@bolt/elements-small": "^0.1.0-alpha.2",
-    "@bolt/elements-strong": "^0.1.0-alpha.1"
   }
 }
