--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@bolt/generic-all": "^0.1.0-beta.2",
     "@bolt/settings-all": "^0.1.0-beta.2",
-    "@bolt/tools-all": "^0.1.0-beta.2"
+    "@bolt/tools-all": "^0.1.0-beta.2",
+    "@bolt/elements-all": "^0.1.0-alpha.1"
   },
   "publishConfig": {
     "access": "public"
