fix: merge conflicts

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "postinstall": "npm run bootstrap"
   },
   "pre-commit": [
-    "test",
-    "build"
+    "test"
   ],
   "config": {
     "commitizen": {
@@ -77,6 +76,7 @@
     "chai": "^4.1.0",
     "chai-fs": "^1.0.0",
     "cz-conventional-changelog": "^2.0.0",
+    "eslint": "^4.5.0",
     "feature-toggle": "^0.3.0",
     "gulp": "gulpjs/gulp#4.0",
     "husky": "^0.14.3",
