--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "version": "independent",
   "npmClient": "yarn",
   "changelog": {
-    "repo": "ec-europa/europa-component-library",
+    "repo": "bolt-design-system/bolt",
     "labels": {
       "tag: new feature": ":rocket: New Feature",
       "tag: breaking change": ":boom: Breaking Change",
@@ -25,8 +25,6 @@
     "packages/ui-toolkit/06-components/**",
     "packages/ui-toolkit/07-themes/**",
     "packages/ui-toolkit/08-utilities/**",
-    "packages/ui-toolkit/bolt",
-    "packages/exec-php",
-    "packages/frctl-twig"
+    "packages/ui-toolkit/bolt"
   ]
 }
