--- a/packages/build-tools/build-styles/package.json
+++ b/packages/build-tools/build-styles/package.json
@@ -32,6 +32,7 @@
     "debug": "^2.6.8",
     "del": "^3.0.0",
     "eyeglass": "^1.2.1",
+    "globby": "^6.1.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-clean-css": "^3.6.0",
     "gulp-duration": "0.0.0",
@@ -52,8 +53,12 @@
     "node-sass-export": "0.0.2",
     "npm-sass": "^2.2.1",
     "postcss-discard-comments": "^2.0.4",
-    "postcss-reporter": "^4.0.0",
+    "postcss-easy-import": "^2.1.0",
+    "postcss-import": "^10.0.0",
+    "postcss-import-sync": "^7.1.4",
+    "postcss-reporter": "^5.0.0",
     "postcss-scss": "^1.0.2",
+    "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "rimraf": "^2.6.1",
     "sassdoc": "^2.3.0",
