--- a/packages/ui-toolkit/03-generic/generic-all/package.json
+++ b/packages/ui-toolkit/03-generic/generic-all/package.json
@@ -34,6 +34,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/generic-global": "^0.1.0-beta.2"
+    "@bolt/generic-global": "^0.1.0-beta.2",
+    "@bolt/generic-reset": "^0.1.0-alpha.1",
+    "@bolt/generic-normalize": "^0.1.0-alpha.1",
+    "@bolt/generic-shared": "^0.1.0-alpha.1"
   }
 }
