--- a/packages/ui-toolkit/04-elements/elements-all/package.json
+++ b/packages/ui-toolkit/04-elements/elements-all/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@bolt/elements-headings": "^0.1.0-alpha.2",
+    "@bolt/elements-tables": "^0.1.0-alpha.1",
     "@bolt/elements-links": "^0.1.0-alpha.2",
     "@bolt/elements-page": "^0.1.0-alpha.2",
     "@bolt/elements-small": "^0.1.0-alpha.2"
