--- a/packages/ui-toolkit/bolt/package.json
+++ b/packages/ui-toolkit/bolt/package.json
@@ -23,7 +23,11 @@
     "@bolt/objects-all": "^0.1.0-alpha.1",
     "@bolt/components-all": "^0.1.0-alpha.1",
     "@bolt/themes-all": "^0.1.0-alpha.1",
-    "@bolt/utilities-all": "^0.1.0-alpha.1"
+    "@bolt/utilities-all": "^0.1.0-alpha.1",
+    "@bolt/components-page-intro": "^0.1.0-alpha.1",
+    "@bolt/components-sg-article": "^0.1.0-alpha.1",
+    "@bolt/components-sg-navigation": "^0.1.0-alpha.1",
+    "@bolt/objects-sg-layout": "^0.1.0-alpha.1"
   },
   "publishConfig": {
     "access": "public"
