Revert "Merge branch 'feature/v0.2-alpha' into develop"
This reverts commit 61eda5483ee89c7ccc0799aaf6aa59ec503695d5, reversing
changes made to 1142c880524ca9985e8cc2acbf72ff857f14ce48.

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "version": "independent",
   "npmClient": "yarn",
   "changelog": {
-    "repo": "bolt-design-system/bolt",
+    "repo": "ec-europa/europa-component-library",
     "labels": {
       "tag: new feature": ":rocket: New Feature",
       "tag: breaking change": ":boom: Breaking Change",
@@ -25,6 +25,8 @@
     "packages/ui-toolkit/06-components/**",
     "packages/ui-toolkit/07-themes/**",
     "packages/ui-toolkit/08-utilities/**",
-    "packages/ui-toolkit/bolt"
+    "packages/ui-toolkit/bolt",
+    "packages/exec-php",
+    "packages/frctl-twig"
   ]
 }
