--- a/packages/ui-toolkit/06-components/components-all/package.json
+++ b/packages/ui-toolkit/06-components/components-all/package.json
@@ -36,9 +36,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-heading": "^0.1.0-alpha.1",
-    "@bolt/components-page-footer": "^0.1.0-alpha.1",
-    "@bolt/components-page-intro": "^0.1.0-alpha.1",
-    "@bolt/components-site": "^0.1.0-alpha.1"
+    "@bolt/components-site": "^0.1.0-alpha.1",
+    "@bolt/components-page-footer": "^0.1.0-alpha.1"
   }
 }
